Bootstrap 4 theme, lato font, font awesome - fix: #1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-banner></app-banner>
-<p>
-  {{title}}
-</p>
-<app-personal-dashboard></app-personal-dashboard>
+<app-navbar></app-navbar>
+<section>
+  <div class="container">
+    <app-personal-dashboard></app-personal-dashboard>
+  </div>
+</section>
+<footer>
+  <div class="container">
+    <div class="row">
+      <p><a href="https://tam4.io">{{ footer }}</a></p>
+    </div>
+  </div>
+</footer>
