--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <app-navbar></app-navbar>
 <section>
   <div class="container">
-    <app-personal-dashboard></app-personal-dashboard>
+    <router-outlet></router-outlet>
   </div>
 </section>
 <footer>
   <div class="container">
     <div class="row">
-      <p><a href="https://tam4.io">{{ footer }}</a></p>
+      <p>
+        <a href="https://tam4.io">
+          <div [innerHTML]="footer"></div>
+        </a>
+      </p>
     </div>
   </div>
 </footer>
