--- a/src/app/personal/today/today.component.html
+++ b/src/app/personal/today/today.component.html
@@ -1,29 +1,22 @@
 <div class="row">
   <div class="col-sm-6">
-    <h3> Sprint backlog </h3>
+    <h3 class="text-xs-center"> Sprint backlog
+      <button type="button" class="btn btn-secondary btn-sm">
+        <i onClick="window.alert('Action closed !');" class="fa fa-plus-circle"></i>
+      </button>
+    </h3>
     <ul class="list-group list-group-sortable-connected">
-      <li class="list-group-item list-group-item closed" *ngFor="let action of actions">
-        <div class="row">
-          <i onClick="window.alert('Action closed !');" class="fa fa-square-o"></i> &nbsp;
-          <a href="www.eco4.io">{{ action.title }} [In Progress] <span class="tag tag-pill tag-default">1</span></a>
-        </div>
-        <div class="row">
-          <div class="col-xs-6">
-            <span class="tag tag-danger">Urgent</span>
-            <span class="tag tag-default">Project 1</span>
-          </div>
-          <div class="col-xs-6">
-            <div class="col-xs-2">
-              <span class="tag tag-pill tag-success">1 / 2</span>
-            </div>
-            <span class="tag tag-default">21/10/2016</span>
-          </div>
-        </div>
+      <li *ngFor="let action of actions" class="list-group-item">
+        <app-personal-action [action]="action"></app-personal-action>
       </li>
     </ul>
   </div>
   <div class="col-sm-6">
-    <h3> Todo today </h3>
+    <h3 class="text-xs-center"> Todo today
+      <button type="button" class="btn btn-secondary btn-sm">
+        <i onClick="window.alert('Action closed !');" class="fa fa-plus-circle"></i>
+      </button>
+    </h3>
     <ul class="list-group list-group-sortable-connected">
       <li class="list-group-item list-group-item-info">
         <div class="row">
