--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,7 +31,6 @@ section {
 //     margin-top: 0;
 //   }
 // }
-
 .navbar-brand {
   padding: 0px;
   /* firefox bug fix */
@@ -47,6 +46,15 @@ section {
 th {
   background-color: #2c3e50;
   color: white;
+}
+
+.ng-valid[required],
+.ng-valid.required {
+  border-left: 5px solid #42A948;
+}
+
+.ng-invalid:not(form) {
+  border-left: 5px solid #a94442;
 }
 
 footer {
