--- a/src/app/personal/today/today.component.html
+++ b/src/app/personal/today/today.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-sm-6">
     <h3 class="text-xs-center"> Sprint backlog
-      <button id="sb_b_action_add" (click)="add2Sprint()" type="button" class="btn btn-secondary btn-sm">
+      <button id="sp_b_action_add" (click)="add2Sprint()" type="button" class="btn btn-secondary btn-sm">
         <i class="fa fa-plus-circle"></i>
       </button>
     </h3>
     <ul class="list-group list-group-sortable-connected">
       <li *ngFor="let action of sprintActions" class="list-group-item">
-        <app-personal-action [action]="action" [arrayActions]="sprintActions"></app-personal-action>
+        <app-personal-action [action]="action" [arrayActions]="sprintActions" [backlogPrefix]="sprintPrefix"></app-personal-action>
       </li>
     </ul>
   </div>
@@ -20,7 +20,7 @@
       <div class="panel-body" dnd-sortable-container [dropZones]="['actions-zone']" [sortableData]="todayActions">
         <ul class="list-group">
           <li *ngFor="let todayAction of todayActions; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
-             <app-personal-action [action]="todayAction" [arrayActions]="sprintActions"></app-personal-action>
+             <app-personal-action [action]="todayAction" [arrayActions]="sprintActions" [backlogPrefix]="todayPrefix"></app-personal-action>
           </li>
         </ul>
     </div>
