--- a/src/app/personal/today/today.component.html
+++ b/src/app/personal/today/today.component.html
@@ -13,8 +13,8 @@
   </div>
   <div class="col-sm-6">
     <h3 class="text-xs-center"> Todo today
-      <button type="button" class="btn btn-secondary btn-sm">
-        <i onClick="window.alert('Action closed !');" class="fa fa-plus-circle"></i>
+      <button id="td_b_action_add" (click)="add2Today()" type="button" class="btn btn-secondary btn-sm">
+        <i class="fa fa-plus-circle"></i>
       </button>
     </h3>
       <div class="panel-body" dnd-sortable-container [dropZones]="['actions-zone']" [sortableData]="todayActions">
