--- a/src/app/personal/today/today.component.html
+++ b/src/app/personal/today/today.component.html
@@ -5,7 +5,7 @@
         <i class="fa fa-plus-circle"></i>
       </button>
     </h3>
-    <ul class="list-group list-group-sortable-connected">
+    <ul class="list-group">
       <li *ngFor="let sprintAction of sprintActions" class="list-group-item">
         <app-personal-action [action]="sprintAction" [arrayActions]="sprintActions" [backlogPrefix]="sprintPrefix"></app-personal-action>
       </li>
@@ -17,9 +17,9 @@
         <i class="fa fa-plus-circle"></i>
       </button>
     </h3>
-      <div class="panel-body" dnd-sortable-container [dropZones]="['actions-zone']" [sortableData]="todayActions">
+      <div class="panel-body">
         <ul class="list-group">
-          <li *ngFor="let todayAction of todayActions; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
+          <li *ngFor="let todayAction of todayActions" class="list-group-item">
              <app-personal-action [action]="todayAction" [arrayActions]="todayActions" [backlogPrefix]="todayPrefix"></app-personal-action>
           </li>
         </ul>
