--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-full navbar-dark bg-inverse">
-    <a class="navbar-brand" routerLink="/home">Tam4</a>
+    <a class="navbar-brand" routerLink="/home">TAM4</a>
     <ul class="nav navbar-nav float-lg-right">
       <li class="nav-item">
         <a class="nav-link" href="#"><i class="fa fa-plus-circle"></i> Add</a>
