--- a/src/app/personal/action/action.component.html
+++ b/src/app/personal/action/action.component.html
@@ -2,58 +2,58 @@
   <div class="row">
     <i onClick="window.alert('Action closed !');" class="fa fa-square-o"></i>
     <i onClick="window.alert('Action chart !');" class="fa fa-area-chart"></i>
-    <i id="{{ backlogPrefix }}_i_action_edit_{{ getId() }}" (click)="setEdit()" class="fa fa-edit"></i>
-    <i id="{{ backlogPrefix }}_i_action_del_{{ getId() }}" (click)="showDeleteModal()" class="fa fa-times"></i>&nbsp;
-    <a id="{{ backlogPrefix }}_l_action_edit_{{ getId() }}" href="javascript:void(0)" (click)="setEdit()" placement="bottom"
-      tooltip="{{ action.description }}">{{ action.title }} <span id="{{ backlogPrefix }}_p_action_todo_{{ getId() }}" class="tag tag-pill tag-default">{{ action.todo }}</span></a>
+    <i id="{{ backlogPrefix }}_i_action_edit_{{ action.$key }}" (click)="setEdit()" class="fa fa-edit"></i>
+    <i id="{{ backlogPrefix }}_i_action_del_{{ action.$key }}" (click)="showDeleteModal()" class="fa fa-times"></i>&nbsp;
+    <a id="{{ backlogPrefix }}_l_action_edit_{{ action.$key }}" href="javascript:void(0)" (click)="setEdit()" placement="bottom"
+      tooltip="{{ action.description }}">{{ action.title }} <span id="{{ backlogPrefix }}_p_action_todo_{{ action.$key }}" class="tag tag-pill tag-default">{{ action.todo }}</span></a>
     <div class="float-xs-right">
-      <i id="{{ backlogPrefix }}_i_action_more_{{ getId() }}" class="fa fa-ellipsis-v"></i>
+      <i id="{{ backlogPrefix }}_i_action_more_{{ action.$key }}" class="fa fa-ellipsis-v"></i>
     </div>
   </div>
   <div class="row">
     <span class="tag tag-danger">Urgent</span>
     <span class="tag tag-default">Project 1</span>
     <div class="float-xs-right">
-      <span id="{{ backlogPrefix }}_p_action_done_{{ getId() }}" class="tag tag-pill tag-success">
+      <span id="{{ backlogPrefix }}_p_action_done_{{ action.$key }}" class="tag tag-pill tag-success">
         {{ action.done }} / {{ action.todo + action.done }}
       </span>
-      <span id="{{ backlogPrefix }}_p_action_date_{{ getId() }}" class="tag tag-pill tag-default">{{ displayDate() }}</span>
+      <span id="{{ backlogPrefix }}_p_action_date_{{ action.$key }}" class="tag tag-pill tag-default">{{ displayDate() }}</span>
     </div>
   </div>
 </div>
 <div [hidden]="!edit">
   <form (ngSubmit)="onSubmit()" #actionForm="ngForm">
     <div class="form-group">
-      <label class="sr-only" for="{{ backlogPrefix }}_edit_title_{{ getId() }}">Title</label>
-      <input type="text" class="form-control" id="{{ backlogPrefix }}_edit_title_{{ getId() }}" required [(ngModel)]="action.title"
+      <label class="sr-only" for="{{ backlogPrefix }}_edit_title_{{ action.$key }}">Title</label>
+      <input type="text" class="form-control" id="{{ backlogPrefix }}_edit_title_{{ action.$key }}" required [(ngModel)]="action.title"
         name="title" placeholder="Title">
     </div>
     <div class="form-group row">
       <label class="col-xs-3 col-form-label">Due date</label>
       <div class="col-xs-4">
-        <my-date-picker id="{{ backlogPrefix }}_edit_date_{{ getId() }}" [selDate]="displayDate()" [options]="myDatePickerNormalOptions"
+        <my-date-picker id="{{ backlogPrefix }}_edit_date_{{ action.$key }}" [selDate]="displayDate()" [options]="myDatePickerNormalOptions"
           (dateChanged)="onDateChanged($event)"></my-date-picker>
       </div>
     </div>
     <div class="form-group row">
-      <label class="col-xs-3 col-form-label" for="{{ backlogPrefix }}_edit_todo_{{ getId() }}">Todo</label>
+      <label class="col-xs-3 col-form-label" for="{{ backlogPrefix }}_edit_todo_{{ action.$key }}">Todo</label>
       <div class="col-xs-3">
-        <input type="number" class="form-control" id="{{ backlogPrefix }}_edit_todo_{{ getId() }}" required [(ngModel)]="action.todo"
+        <input type="number" class="form-control" id="{{ backlogPrefix }}_edit_todo_{{ action.$key }}" required [(ngModel)]="action.todo"
           name="todo">
       </div>
-      <label class="col-xs-3 col-form-label" for="{{ backlogPrefix }}_edit_done_{{ getId() }}">Done</label>
+      <label class="col-xs-3 col-form-label" for="{{ backlogPrefix }}_edit_done_{{ action.$key }}">Done</label>
       <div class="col-xs-3">
-        <input type="number" class="form-control" id="{{ backlogPrefix }}_edit_done_{{ getId() }}" required [(ngModel)]="action.done"
+        <input type="number" class="form-control" id="{{ backlogPrefix }}_edit_done_{{ action.$key }}" required [(ngModel)]="action.done"
           name="done">
       </div>
     </div>
     <div class="form-group">
-      <label class="sr-only" for="{{ backlogPrefix }}_edit_desc_{{ getId() }}">Description</label>
-      <textarea type="text" class="form-control" id="{{ backlogPrefix }}_edit_desc_{{ getId() }}" [(ngModel)]="action.description"
+      <label class="sr-only" for="{{ backlogPrefix }}_edit_desc_{{ action.$key }}">Description</label>
+      <textarea type="text" class="form-control" id="{{ backlogPrefix }}_edit_desc_{{ action.$key }}" [(ngModel)]="action.description"
         name="desc" rows="4" placeholder="Description"></textarea>
     </div>
-    <button id="{{ backlogPrefix }}_b_save_{{ getId() }}" type="submit" class="btn btn-success" [disabled]="!actionForm.form.valid">Save</button>
-    <button id="{{ backlogPrefix }}_b_close_{{ getId() }}" type="button" class="btn btn-secondary" (click)="close()">Close</button>
+    <button id="{{ backlogPrefix }}_b_save_{{ action.$key }}" type="submit" class="btn btn-success" [disabled]="!actionForm.form.valid">Save</button>
+    <button id="{{ backlogPrefix }}_b_close_{{ action.$key }}" type="button" class="btn btn-secondary" (click)="close()">Close</button>
   </form>
 </div>
 <div bsModal #deleteModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -61,7 +61,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title pull-left">Delete action</h4>
-        <button id="{{ backlogPrefix }}_modal_b_close_{{ getId() }}" type="button" class="close pull-right" aria-label="Close" (click)="hideDeleteModal()">
+        <button id="{{ backlogPrefix }}_modal_b_close_{{ action.$key }}" type="button" class="close pull-right" aria-label="Close" (click)="hideDeleteModal()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -70,8 +70,8 @@
         <p>Do you want to proceed?</p>
       </div>
       <div class="modal-footer">
-        <button id="{{ backlogPrefix }}_modal_b_delete_{{ getId() }}" type="button" class="btn btn-danger" (click)="delete()">Yes</button>
-        <button id="{{ backlogPrefix }}_modal_b_cancel_{{ getId() }}" type="button" class="btn btn-secondary" (click)="hideDeleteModal()">No</button>
+        <button id="{{ backlogPrefix }}_modal_b_delete_{{ action.$key }}" type="button" class="btn btn-danger" (click)="delete()">Yes</button>
+        <button id="{{ backlogPrefix }}_modal_b_cancel_{{ action.$key }}" type="button" class="btn btn-secondary" (click)="hideDeleteModal()">No</button>
       </div>
     </div>
   </div>
