Migration to Bootstrap 4.0.0-alpha.6 - fix: #47

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </section>
 <footer>
   <div class="container">
-    <div class="row">
+    <div class="d-flex justify-content-center">
       <p>
         <a href="https://tam4.io">
           <div [innerHTML]="footer"></div>
