--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,25 +1,19 @@
 <header>
-  <nav class="navbar navbar-full navbar-dark bg-inverse">
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
     <a class="navbar-brand" routerLink="/home">TAM4</a>
-    <ul class="nav navbar-nav float-lg-right">
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-plus-circle"></i> Add</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/home"><i class="fa fa-dashboard"></i> Dashboard</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/today"><i class="fa fa-home"></i> Personal</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-tasks"></i> Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-user"></i> Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-sign-out"></i> Logout</a>
-      </li>
-    </ul>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="#"><i class="fa fa-plus-circle"></i> Add</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/home"><i class="fa fa-dashboard"></i> Dashboard</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/today"><i class="fa fa-home"></i> Personal</a>
+        <a class="nav-item nav-link" href="#"><i class="fa fa-tasks"></i> Projects</a>
+        <a class="nav-item nav-link" href="#"><i class="fa fa-user"></i> Profile</a>
+        <a class="nav-item nav-link" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+      </div>
+    </div>
   </nav>
 </header>
