--- a/src/app/personal/today/today.component.html
+++ b/src/app/personal/today/today.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-sm-6">
-    <h3 class="text-xs-center"> Sprint backlog
+  <div class="col">
+    <h3 class="d-flex justify-content-center"> Sprint backlog &nbsp;
       <button id="sp_b_action_add" (click)="add2Sprint()" type="button" class="btn btn-secondary btn-sm">
         <i class="fa fa-plus-circle"></i>
       </button>
@@ -11,8 +11,8 @@
       </li>
     </ul>
   </div>
-  <div class="col-sm-6">
-    <h3 class="text-xs-center"> Todo today
+  <div class="col">
+    <h3 class="d-flex justify-content-center"> Todo today &nbsp;
       <button id="td_b_action_add" (click)="add2Today()" type="button" class="btn btn-secondary btn-sm">
         <i class="fa fa-plus-circle"></i>
       </button>
