--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,10 @@ $font-size-large: ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small: ceil(($font-size-base * 0.85)); // ~12px
 //
 // Style
+.navbar {
+  background-color: #2c3e50;
+}
+
 body {
   // background-image: url('../images/bg-light.jpg');
   @include lato-font('medium');
