--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
     <a class="navbar-brand" routerLink="/home">
-    <img src="/assets/images/TAM4-logo.png" width="79" height="30" alt="">
+    <img src="/assets/images/TAM4-logo.png" width="79" height="30" alt="TAM4 logo">
     </a>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
