Auth with Google - fix: #58

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+<div *ngIf="isLoggedIn">
+  <app-navbar></app-navbar>
+</div>
 <app-alert></app-alert>
 <section>
   <div class="container">
